force-app/main/default/objects/Support_Program__c/Support_Program__c.object-meta.xml
<CustomObject>
    <label>Support Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>