force-app/main/default/objects/Support_Program__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Programs</relationshipLabel>
    <relationshipName>Support_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>