force-app/main/default/objects/Support_Program__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <type>TextArea</type>
</CustomField>