force-app/main/default/objects/Support_Program__c/fields/Program_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Program_Outcomes__c</fullName>
    <label>Program Outcomes</label>
    <type>TextArea</type>
</CustomField>