force-app/main/default/objects/Support_Program__c/recordTypes/Healthcare_Access_Program.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Access_Program</fullName>
    <active>true</active>
    <label>Healthcare Access Program</label>
</RecordType>