force-app/main/default/objects/Support_Program__c/recordTypes/Parenting_Program.recordType-meta.xml
<RecordType>
    <fullName>Parenting_Program</fullName>
    <active>true</active>
    <label>Parenting Program</label>
</RecordType>