force-app/main/default/objects/Support_Program__c/recordTypes/Youth_Mentorship_Program.recordType-meta.xml
<RecordType>
    <fullName>Youth_Mentorship_Program</fullName>
    <active>true</active>
    <label>Youth Mentorship Program</label>
</RecordType>